--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -32,7 +32,8 @@ jobs:
           upstream_sync_repo: lobehub/lobe-chat
           upstream_sync_branch: main
           target_sync_branch: main
-          target_repo_token: ${{ secrets.GITHUB_TOKEN }} # automatically generated, no need to set
+          # target_repo_token: ${{ secrets.GITHUB_TOKEN }} # automatically generated, no need to set
+          target_repo_token: ${{ secrets.WORKFLOW_TOKEN }} # Use self created token for sync even the workflow file
           test_mode: false
 
       - name: Sync check
